--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.6",
+    "hamburger-react": "^2.5.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
